# neuro-wasm

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
crates/containerd-shim-webgpu/: Cargo.toml  README.md
crates/containerd-shim-webgpu/src/: broker.rs  host.rs  instance.rs  lib.rs  main.rs  middleware.rs  model.rs  onnx_detect_helper.py  tests.rs
crates/webgpu-guest/: Cargo.toml  README.md
crates/webgpu-guest/src/: lib.rs
examples/: README.md
examples/image-classification-demo/: Cargo.toml  Dockerfile  README.md  build.rs
examples/image-classification-demo/images/: golden-retriever.ppm  ocean.ppm  red-apple.ppm
examples/image-classification-demo/models/: resnet50-demo.json  yolo-demo.json
examples/image-classification-demo/src/: main.rs
examples/webgpu-demo/: Cargo.toml  Dockerfile  README.md  build.rs
examples/webgpu-demo/src/: main.rs
examples/yolo-detection-demo/: Cargo.toml  Dockerfile  README.md
examples/yolo-detection-demo/models/: yolo-detection-demo.json
examples/yolo-detection-demo/src/: main.rs
