[workspace]
members = [
    "crates/containerd-shim-webgpu",
    "examples/image-classification-demo",
    "examples/webgpu-demo",
]
default-members = [
    "crates/containerd-shim-webgpu",
    "examples/image-classification-demo",
    "examples/webgpu-demo",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.4.0"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/containerd/runwasi"
homepage = "https://github.com/containerd/runwasi"

[workspace.dependencies]
anyhow = "1.0"
cfg-if = "1.0"
containerd-shim-wasm = { git = "https://github.com/containerd/runwasi.git", tag = "containerd-shim-wasm/v1.0.0", package = "containerd-shim-wasm" }
env_logger = "0.11"
libc = "0.2.177"
log = "0.4"
oci-tar-builder = { git = "https://github.com/containerd/runwasi.git", tag = "oci-tar-builder/v0.4.0", package = "oci-tar-builder" }
serde = "1.0"
serde_json = "1.0"
serial_test = "3"
sha256 = "1.6.0"
tar = "0.4"

[profile.release]
panic = "abort"
