[workspace]
members = [
    "crates/containerd-shim-webgpu",
    "examples/image-classification-demo",
    "examples/webgpu-demo",
]
exclude = ["vendor/oci-tar-builder-legacy"]
default-members = [
    "crates/containerd-shim-webgpu",
    "examples/image-classification-demo",
    "examples/webgpu-demo",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.4.0"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/containerd/runwasi"
homepage = "https://github.com/containerd/runwasi"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cfg-if = "1.0"
containerd-shim = "0.8"
# Vendored support crates from runwasi v1.0.0.
containerd-shimkit = { path = "vendor/runwasi/crates/containerd-shimkit", package = "containerd-shimkit" }
containerd-shim-wasm-test-modules = { path = "vendor/runwasi/crates/containerd-shim-wasm-test-modules", package = "containerd-shim-wasm-test-modules" }
# Use a vendored copy of the upstream v1.0.0 workspace so the transitive
# libcontainer version stays aligned with the original runwasi lockfile.
containerd-shim-wasm = { path = "vendor/runwasi/crates/containerd-shim-wasm", package = "containerd-shim-wasm" }
env_logger = "0.11"
libc = "0.2.177"
libcontainer = { version = "=0.5.3", default-features = false }
log = "0.4"
nix = "0.29"
oci-spec = { version = "0.7.1", features = ["runtime"] }
oci-tar-builder = { path = "vendor/runwasi/crates/oci-tar-builder", package = "oci-tar-builder" }
protobuf = "=3.2"
serde = "1.0"
serde_json = "1.0"
serial_test = "3"
sha256 = "1.6.0"
tar = "0.4"
tempfile = "3.19"
thiserror = "2.0"
tokio = { version = "1.44.2", default-features = false }
tracing = "0.1"
wat = "1.228"
windows-sys = "0.59"

[profile.release]
panic = "abort"
