[package]
name = "image-classification-demo"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
image = { version = "0.24.9", default-features = false, features = ["jpeg", "png", "pnm"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
tar = { workspace = true, optional = true }
sha256 = { workspace = true, optional = true }
log = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
oci-spec = { version = "=0.6.7", optional = true }
oci-tar-builder = { path = "../../vendor/oci-tar-builder-legacy", optional = true, package = "oci-tar-builder" }
anyhow = { workspace = true, optional = true }

[features]
default = []
oci-v1-tar = [
    "dep:anyhow",
    "dep:env_logger",
    "dep:log",
    "dep:oci-spec",
    "dep:oci-tar-builder",
    "dep:sha256",
    "dep:tar",
]
