[package]
name = "image-classification-demo"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
image = { version = "0.24.9", default-features = false, features = ["jpeg", "png", "pnm"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
webgpu-guest = { workspace = true }
